--- a/generator/templates/generator/profile.html
+++ b/generator/templates/generator/profile.html
@@ -48,7 +48,7 @@
             {% endif %}
           </div>
           
-          <div class="mb-3 mt-3 p-3 bg-light rounded">
+          <div class="mb-3 mt-3 p-3 rounded bg-secondary bg-opacity-25 profile-token-limits">
             <h6 class="mb-3"><i class="bi bi-graph-up me-2"></i>Лимиты токенов:</h6>
             
             <div class="mb-2">
